<resources>
    <string name="app_name">Learning Tracker</string>
    <string name="action_history">History</string>
    <string name="action_forward">Forward</string>
    <string name="action_visualize">Visualize Data</string>
    <string name="searchbar">Search or type URL</string>
    <string name="action_switch">Learning</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_close_title">Closing Activity</string>
    <string name="action_close">Are you sure that you want to close this activity?</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="title_activity_data_visualizer">Data Visualization</string>
    <string name="xAPI_language_tag">en-US</string>
    <string name="tab_charts">Chart</string>
    <string name="tab_xapi">xAPI Statements</string>
    <string name="homepage">https://google.com</string>
    <string name="google_search">https://www.google.com/search?q=</string>
    <string name="tab_xapi_description">Click on a statement if you want to change the learning value.</string>
    <string name="eula">eula_1.txt</string>
    <string name="xapitextViewDuration">Spent time is only tracked for \"exited\".</string>
    <string name="action_about">About</string>
    <string name="about_programmer">This app has been programmed by Erhan Erfiliz as part of the Bachelor thesis \"App zur Sammlung von Lerndaten\".</string>
    <string name="about_appicon_designer">Icon made by Madebyoliver at www.flaticon.com - Keyword: Pie Chart</string>
    <string name="about_charticon_designer">Icon made by Austin Andrews at www.materialdesignicons.com - Keyword: chart-pie</string>
    <string name="about_credits">Credits</string>
    <string name="about_mpandroid">Pie Chart Visualization powered by MP Android Chart - created by Philipp Jahoda</string>
    <string name="learning_note">Page set as learning relevant</string>
    <string name="learning_note2">Page set as not learning relevant</string>
    <string name="xapi_learning">Learning relevant</string>
    <string name="xapi_timespent">At</string>
    <string name="xapi_duration">Time spent</string>
</resources>
